--- a/petstyles.css
+++ b/petstyles.css
@@ -158,7 +158,7 @@ h1 {
   font-family: "titan-one";
   font-style: normal;
   font-weight: 700;
-  src: local("titan-one), url("TitanOne-Regular.ttf") format("ttf");
+  src: local("titan-one"), url("TitanOne-Regular.ttf") format("ttf");
 
 }
 
