--- a/petstyles.css
+++ b/petstyles.css
@@ -116,7 +116,7 @@ h1 {
 .logo a { 
 	font-style: normal;
 	font-weight: 400;
-	font-family: titan-one, Nunito, Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Corben', cursive, Nunito, Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 3em;
 	color: #FAC6C7;
 	text-shadow: 3px 4px 0 #990134;
